# energy-core-house

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  data_energie_research.md  economy.rs  lib.rs  physics.rs  sim.rs  wasm.rs  weather.rs
.github/workflows/: deploy.yml
src/: appliance.rs  building.rs  economy.rs  grid.rs  lib.rs  map.rs  physics.rs  resident.rs  sim.rs  storage.rs  wasm.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/sprites/: README.md
web/src/: App.tsx  GridApp.tsx  Root.tsx  engine.ts  gridTypes.ts  styles.css  types.ts  useGame.ts  useGrid.ts
web/src/components/: BuildMenu.tsx  ColonyView.tsx  Dashboard.tsx  HouseSchematic.tsx  ProductionChart.tsx
web/src/components/grid/: LayerNav.tsx  NodeChart.tsx  NodeInspector.tsx  SpiralPanel.tsx
web/src/map/: MapView.tsx
